syntax = "proto3";

package cust_context;

import "google/protobuf/empty.proto";

option go_package = "github.com/milkyhoop/template-service-golang/internal/delivery/pb/template;template";
// option python_package = "app.protos";

service Cust_context {
  rpc DoSomething (Cust_contextRequest) returns (Cust_contextResponse);
  rpc HealthCheck (google.protobuf.Empty) returns (google.protobuf.Empty);
}

message Cust_contextRequest {
  string user_id = 1;
  string input = 2;
}

message Cust_contextResponse {
  string status = 1;
  string result = 2;
}
